syntax = "proto3";

package echobeats;

option go_package = "github.com/EchoCog/echollama/core/echobeats/proto";

// CognitiveStep represents a step in the 12-step cognitive loop
message CognitiveStep {
    int32 step_number = 1;           // 0-11 for the 12 steps
    int64 timestamp = 2;             // Unix timestamp in nanoseconds
    string phase = 3;                // "affordance", "relevance", or "salience"
    bytes payload = 4;               // Step-specific data
}

// StepResult represents the output from processing a cognitive step
message StepResult {
    int32 step_number = 1;
    string engine_id = 2;            // Which engine processed this
    bool success = 3;
    bytes output = 4;
    double confidence = 5;
    int64 processing_time_ns = 6;
    string error_message = 7;
}

// PivotalSync synchronizes engines at pivotal steps (0 and 6)
message PivotalSync {
    int32 pivotal_step = 1;          // 0 or 6
    string engine_id = 2;
    bytes state_snapshot = 3;
    int64 timestamp = 4;
}

// SyncAcknowledge acknowledges a pivotal sync
message SyncAcknowledge {
    int32 pivotal_step = 1;
    string engine_id = 2;
    bool ready = 3;
}

// StateUpdate broadcasts state changes between engines
message StateUpdate {
    string source_engine = 1;
    string update_type = 2;          // "attention", "context", "coherence"
    bytes state_data = 3;
    int64 timestamp = 4;
}

// AffordanceData represents past experience processing
message AffordanceData {
    string action = 1;
    bytes context = 2;
    double past_success = 3;
    double confidence = 4;
    int64 timestamp = 5;
}

// RelevanceData represents relevance realization
message RelevanceData {
    bytes focus = 1;
    double relevance_score = 2;
    repeated double orientation_vector = 3;
    int64 timestamp = 4;
}

// SalienceData represents future simulation
message SalienceData {
    string scenario_id = 1;
    string description = 2;
    double probability = 3;
    double desirability = 4;
    repeated bytes consequences = 5;
    int64 timestamp = 6;
}

// EngineMetrics tracks performance of each engine
message EngineMetrics {
    string engine_id = 1;
    int64 steps_processed = 2;
    int64 total_processing_time_ns = 3;
    double average_confidence = 4;
    int64 errors = 5;
    int64 last_active = 6;
}

// CognitiveLoopState represents the full state of the cognitive loop
message CognitiveLoopState {
    int32 current_step = 1;
    int64 cycle_count = 2;
    bool running = 3;
    repeated EngineMetrics engine_metrics = 4;
    double coherence_score = 5;
    int64 last_pivotal_sync = 6;
}

// StartLoop initiates the cognitive loop
message StartLoop {
    int64 timestamp = 1;
}

// StopLoop halts the cognitive loop
message StopLoop {
    int64 timestamp = 1;
    string reason = 2;
}

// LoopStatus reports loop status
message LoopStatus {
    bool running = 1;
    int64 cycle_count = 2;
    int32 current_step = 3;
}
